Importing Transifex es, ar, fr on Jan 4, 2016

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -532,26 +532,26 @@ ar:
       multi_page_html: "عرض %{model} <b>%{from} - %{to}</b> من <b>%{count}</b> إجمالًا"
     models:
       report:
-        zero: ""
-        one: ""
-        two: ""
-        few: ""
-        many: ""
-        other: ""
+        zero: "تقرير"
+        one: "تقرير"
+        two: "تقارير"
+        few: "تقارير"
+        many: "تقارير"
+        other: "تقارير"
       child:
-        zero: ""
-        one: ""
-        two: ""
-        few: ""
-        many: ""
-        other: ""
+        zero: "حالة"
+        one: "حالة"
+        two: "حالات"
+        few: "حالات"
+        many: "حالات"
+        other: "حالات"
       incident:
-        zero: ""
-        one: ""
-        two: ""
-        few: ""
-        many: ""
-        other: ""
+        zero: "حادث"
+        one: "حادث"
+        two: "حوادث"
+        few: "حوادث"
+        many: "حوادث"
+        other: "حوادث"
   users:
     unverified: "مستخدمين لم يتم التحقق منهم"
     select_role: "الرجاء تحديد الدور قبل التحقق من المسخدم "
@@ -567,6 +567,7 @@ ar:
     sort_by:
       label: "فرز حسب"
       full_name: "الاسم الكامل"
+      agency: "وكالة"
 
   roles:
     label: "الأدوار"
@@ -609,7 +610,6 @@ ar:
     view: "عرض الوكالة"
     successfully_created: "تم إنشاء الوكالة بنجاح."
     successfully_updated: "تم تحديث الوكالة بنجاح."
-    drag_n_drop: "يمكنك سحب الحقول وإفلاتها لتحرير الترتيب المطلوب"
     actions:
       show_all: "إظهار الكل"
       show: "إظهار"
@@ -713,6 +713,7 @@ ar:
     full_name: "الاسم الكامل"
     history_of: "تاريخ %{user_name} "
     disabled: "مُعطل "
+    agency: "Agency"
     actions:
       delete: "حذف"
     messages:
@@ -874,6 +875,7 @@ ar:
     options: "خيارات"
     confirm_delete: "هل أنت متأكد أنك تريد إلغاء هذا النموذج؟"
     required_field: "%{field} مطلوب"
+    required_field_js: "لا يمكن أن يكون هذا الحقل فارغًا"
     form_group_name: "اسم مجموعة النموذج"
     modal_sidebar_help: "حدد نوع الحقل"
     modal_sidebar_help_selected: "نوع الحقل"
@@ -890,12 +892,12 @@ ar:
     date_updated: "تاريخ التحديث:"
     select_a_criteria: "حدد معيار"
     records_found:
-      zero: ""
-      one: ""
-      two: ""
-      few: ""
-      many: ""
-      other: ""
+      zero: "العثور على %{count} تقرير"
+      one: "العثور على %{count} تقرير"
+      two: "العثور على %{count} تقارير"
+      few: "العثور على %{count} تقارير"
+      many: "العثور على %{count} تقارير"
+      other: "العثور على %{count} تقارير"
   search: "بحث"
   select_all: " إختار كل السجلات"
   no_results_found: "لم يتم العثور على نتائج"
@@ -913,6 +915,7 @@ ar:
       phone: "الهاتف"
       location: "الموقع"
       other_information: "معلومات أخرى"
+      support_forum: "منتدى الدعم"
     updated: "تم تحديث معلومات الاتصال بنجاح."
     edit_info: "تحرير معلومات جهة الإتصال"
     info_label: "معلومات الاتصال"
@@ -1088,6 +1091,7 @@ ar:
       label: "الإبلاغ عن عوامل التصفية"
       attribute: "عامل التصفية"
       value: "مع"
+      not_null: "قيمة النموذج لا يجب أن يكون فارغًا"
     is_graph: "هل تريد إنتاج مخطّط بياني؟"
     no_data: "لا يوجد بيانات لهذا التقرير"
     export:
@@ -1233,75 +1237,75 @@ ar:
     all_cases: "جميع الحالات"
     open: "مفتوح"
     count_risk_level_total:
-      zero: ""
-      one: ""
-      two: ""
-      few: ""
-      many: ""
-      other: ""
+      zero: "لديك %{stat} <span>%{stat_type} حالة</span> مخاطر "
+      one: "لديك %{stat} <span>%{stat_type} حالة</span> مخاطر "
+      two: "لديك %{stat} <span>%{stat_type} حالات</span> مخاطر "
+      few: "لديك %{stat} <span>%{stat_type} حالات</span> مخاطر "
+      many: "لديك %{stat} <span>%{stat_type} حالات</span> مخاطر "
+      other: "لديك %{stat} <span>%{stat_type} حالات</span> مخاطر "
     count_risk_level_new:
-      zero: ""
-      one: ""
-      two: ""
-      few: ""
-      many: ""
-      other: ""
+      zero: "و %{stat} <span>حالة</span> <span>%{stat_type} مخاطرة</span> جديدة"
+      one: "و %{stat} <span>حالة</span> <span>%{stat_type} مخاطرة</span> جديدة"
+      two: "و %{stat} <span>حالات</span> <span>%{stat_type} مخاطرة</span> جديدة"
+      few: "و %{stat} <span>حالات</span> <span>%{stat_type} مخاطرة</span> جديدة"
+      many: "و %{stat} <span>حالات</span> <span>%{stat_type} مخاطرة</span> جديدة"
+      other: "و %{stat} <span>حالات</span> <span>%{stat_type} مخاطرة</span> جديدة"
     count_records_total:
-      zero: ""
-      one: ""
-      two: ""
-      few: ""
-      many: ""
-      other: ""
+      zero: "لديك %{stat} <span>حالة</span> إجمالية"
+      one: "لديك %{stat} <span>حالة</span> إجمالية"
+      two: "لديك %{stat} <span>حالات</span> إجمالية"
+      few: "لديك %{stat} <span>حالات</span> إجمالية"
+      many: "لديك %{stat} <span>حالات</span> إجمالية"
+      other: "لديك %{stat} <span>حالات</span> إجمالية"
     count_records_new:
-      zero: ""
-      one: ""
-      two: ""
-      few: ""
-      many: ""
-      other: ""
+      zero: "و %{stat} <span>حالة</span> جديدة"
+      one: "و %{stat} <span>حالة</span> جديدة"
+      two: "و %{stat} <span>حالات</span> جديدة"
+      few: "و %{stat} <span>حالات</span> جديدة"
+      many: "و %{stat} <span>حالات</span> جديدة"
+      other: "و %{stat} <span>حالات</span> جديدة"
     count_referrals_total:
-      zero: ""
-      one: ""
-      two: ""
-      few: ""
-      many: ""
-      other: ""
+      zero: "لديك %{stat} <span>إحالة</span> إجمالية"
+      one: "لديك %{stat} <span>إحالة</span> إجمالية"
+      two: "لديك %{stat} <span>إحالات</span> إجمالية"
+      few: "لديك %{stat} <span>إحالات</span> إجمالية"
+      many: "لديك %{stat} <span>إحالات</span> إجمالية"
+      other: "لديك %{stat} <span>إحالات</span> إجمالية"
     worker_count_referrals_total:
-      zero: ""
-      one: ""
-      two: ""
-      few: ""
-      many: ""
-      other: ""
+      zero: "<span>%{case_worker}</span> لديه %{stat} <span>إحالة</span> إجمالية"
+      one: "<span>%{case_worker}</span> لديه %{stat} <span>إحالة</span> إجمالية"
+      two: "<span>%{case_worker}</span> لديه %{stat} <span>إحالات</span> إجمالية"
+      few: "<span>%{case_worker}</span> لديه %{stat} <span>إحالات</span> إجمالية"
+      many: "<span>%{case_worker}</span> لديه %{stat} <span>إحالات</span> إجمالية"
+      other: "<span>%{case_worker}</span> لديه %{stat} <span>إحالات</span> إجمالية"
     count_referrals_new:
-      zero: ""
-      one: ""
-      two: ""
-      few: ""
-      many: ""
-      other: ""
+      zero: "و %{stat} <span>إحالة</span> جديدة"
+      one: "و %{stat} <span>إحالة</span> جديدة"
+      two: "و %{stat} <span>إحالات</span> جديدة"
+      few: "و %{stat} <span>إحالات</span> جديدة"
+      many: "و %{stat} <span>إحالات</span> جديدة"
+      other: "و %{stat} <span>إحالات</span> جديدة"
     worker_count_total:
-      zero: ""
-      one: ""
-      two: ""
-      few: ""
-      many: ""
-      other: ""
+      zero: "<span>%{case_worker}</span> لديه %{stat} <span>حالة</span> إجمالية "
+      one: "<span>%{case_worker}</span> لديه %{stat} <span>حالة</span> إجمالية "
+      two: "<span>%{case_worker}</span> لديه %{stat} <span>حالات</span> إجمالية "
+      few: "<span>%{case_worker}</span> لديه %{stat} <span>حالات</span> إجمالية "
+      many: "<span>%{case_worker}</span> لديه %{stat} <span>حالات</span> إجمالية "
+      other: "<span>%{case_worker}</span> لديه %{stat} <span>حالات</span> إجمالية "
     manager_count_open_total:
-      zero: ""
-      one: ""
-      two: ""
-      few: ""
-      many: ""
-      other: ""
+      zero: "لديك %{stat} <span>حالة</span> مفتوحة"
+      one: "لديك %{stat} <span>حالة</span> مفتوحة"
+      two: "لديك %{stat} <span>حالات</span> مفتوحة"
+      few: "لديك %{stat} <span>حالات</span> مفتوحة"
+      many: "لديك %{stat} <span>حالات</span> مفتوحة"
+      other: "لديك %{stat} <span>حالات</span> مفتوحة"
     manager_count_closed_total:
-      zero: ""
-      one: ""
-      two: ""
-      few: ""
-      many: ""
-      other: ""
+      zero: "و %{stat} <span>حالة</span> مغلقة "
+      one: "و %{stat} <span>حالة</span> مغلقة "
+      two: "و %{stat} <span>حالات</span> مغلقة "
+      few: "و %{stat} <span>حالات</span> مغلقة "
+      many: "و %{stat} <span>حالات</span> مغلقة "
+      other: "و %{stat} <span>حالات</span> مغلقة "
     open_cases: "حالات مفتوحة"
     new_last_week: "جديد <span>(الاسبوع الماضي)</span>"
     new_this_week: "جديد <span>(الاسبوع الحالي)</span>"
@@ -1315,6 +1319,7 @@ ar:
         one: "1 خطأ حظر هذا %{model} من الحفظ"
         other: "%{count} اخطاء منعت هذا %{model} من الحفظ"
         body: "هناك مشكلات في الحقول التالية:"
+        body_js: "لحفظ السجل، يجب معالجة المشاكل في الحقول التالية:"
 
     agencies:
       logo_size: "الرجاء تحميل ملف أصغر من 10 ميجابايت"
@@ -1506,6 +1511,8 @@ ar:
     last_update: "التحديث الأخير"
     current_owner: "المالك الحالي"
     change_log: "سجل التغيير"
+    record_information: "تسجيل المعلومات"
+    name_date_seperator: "عن"
 
   exports:
     no_records: "لا يوجد سجلات متاحة!"
