--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -390,6 +390,7 @@ en:
       armed_force_group_name: "Armed Force or Group:"
       armed_force_group_type: "Armed Force or Group Type:"
       record_state: "Record State:"
+      interview_date: "Interview Date:"
 
   incident:
     label: "Incident ID"
