Add a checkbox to mark mobile_form in form control section.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -746,6 +746,7 @@ en:
   imei: "IMEI"
   blacklisted: "Blacklisted?"
   visible: "Visible"
+  mobile_form: "Mobile form"
   hidden: "Hidden"
   help_text: "Help text"
   multi_select: "Multi Select"
