Change visible label name when locale is en.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -745,8 +745,8 @@ en:
   hello: "Hello"
   imei: "IMEI"
   blacklisted: "Blacklisted?"
-  visible: "Visible"
-  mobile_form: "Mobile form"
+  visible_for_web: "Visible for web app"
+  visible_for_mobile: "Visible for mobile app"
   hidden: "Hidden"
   help_text: "Help text"
   multi_select: "Multi Select"
