Change visible label name for all locales.

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -742,7 +742,8 @@ es:
   hello: "Hola"
   imei: "IMEI"
   blacklisted: "¿En la lista negra?"
-  visible: "Visible"
+  visible_for_web: "Solo visible para aplicación web"
+  visible_for_mobile: "Solo visible para aplicación móvil"
   hidden: "Oculto"
   help_text: "Texto de ayuda"
   multi_select: "Selección múltiple"
