--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -739,7 +739,8 @@ fr:
   hello: "Bonjour"
   imei: "Numéro d'identité internationale d'équipement mobile (IMEI)"
   blacklisted: "Sur liste noire ?"
-  visible: "Visible"
+  visible_for_web: "Visible pour application web"
+  visible_for_mobile: "Visible pour application mobile"
   hidden: "Masqué"
   help_text: "Texte d'aide"
   multi_select: "Choix multiple"
