--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -313,7 +313,8 @@ zh:
   hello: "你好"
   imei: "IMEI"
   blacklisted: "黑名单?"
-  visible: "可见"
+  visible_for_web: "网页可见"
+  visible_for_mobile: "移动端可见"
   hidden: "隐藏"
   help_text: "帮助"
   cancel: "取消"
