--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -754,7 +754,8 @@ ar:
   hello: "مرحباً"
   imei: "الهوية الدولية للأجهزة المتنقلة IMEI"
   blacklisted: "هل هو مدرج بالقائمة السوداء ؟"
-  visible: "مرئي"
+  visible_for_web: "مرئي لتطبيقات الويب"
+  visible_for_mobile: "مرئي لتطبيقات الجوال"
   hidden: "مخفي"
   help_text: "نص المساعدة"
   multi_select: "متعدد الاختيارات"
