--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -760,6 +760,7 @@ en:
   replications: "Replications"
   provide_translation: "Provide translation for"
   hide_on_view_page: "Hide On View Page"
+  not_future_date: "Is not a future date"
   last_login: "Last Login"
 
 
