Add index page for potential_matches controller and add potential_match tab in nav.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -89,6 +89,7 @@ en:
      cases: "CASES"
      tracing_request: "TRACING REQUESTS"
      incidents: "INCIDENTS"
+     potential_match: "MATCHES"
      children: "CHILDREN"
      forms: "FORMS"
      lookups: "LOOKUPS"
