--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -761,6 +761,7 @@ en:
   replications: "Replications"
   provide_translation: "Provide translation for"
   hide_on_view_page: "Hide On View Page"
+  show_on_minify_form: "Show On Minify Form"
   last_login: "Last Login"
 
 
