--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -758,6 +758,7 @@ es:
   replications: "Copias"
   provide_translation: "Proporcionar traducción para"
   hide_on_view_page: "Ocultar en la página de vista"
+  show_on_minify_form: "Mostrar en el Mini Forma"
   last_login: "Ultimo inicio de sesión"
 
 
