Revert "Change visible label name for all locales."
This reverts commit 9e2624a4f7c54893e01e956b9e47bb1af725d5e9.

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -754,8 +754,7 @@ ar:
   hello: "مرحباً"
   imei: "الهوية الدولية للأجهزة المتنقلة IMEI"
   blacklisted: "هل هو مدرج بالقائمة السوداء ؟"
-  visible_for_web: "مرئي لتطبيقات الويب"
-  visible_for_mobile: "مرئي لتطبيقات الجوال"
+  visible: "مرئي"
   hidden: "مخفي"
   help_text: "نص المساعدة"
   multi_select: "متعدد الاختيارات"
