--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -739,8 +739,7 @@ fr:
   hello: "Bonjour"
   imei: "Numéro d'identité internationale d'équipement mobile (IMEI)"
   blacklisted: "Sur liste noire ?"
-  visible_for_web: "Visible pour application web"
-  visible_for_mobile: "Visible pour application mobile"
+  visible: "Visible"
   hidden: "Masqué"
   help_text: "Texte d'aide"
   multi_select: "Choix multiple"
