--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -230,8 +230,7 @@ ru:
   # hello: "Hello"
   # imei: "IMEI"
   # blacklisted: "Blacklisted?"
-  # visible_for_web: "Visible for web"
-  # visible_for_mobile: "Visible for mobile"
+  # visible: "Visible"
   # hidden: "Hidden"
   # help_text: "Help text"
   # cancel: "Cancel"
