Updating batch flagging error message

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -220,7 +220,7 @@ en:
     id_of_record_this_duplicate_of: "Enter the ID of the record this is a duplicate of:"
     duplicate_header: "Marking %{child_name} as Duplicate"
     flag_error_message: "Please explain why you are flagging this record."
-    flag_records_error_message: "Please explain why you are flagging these records."
+    flag_records_error_message: "Enter a flag reason and if adding a date use a valid date format."
     selected_records_error_message: "Please select one or more records to flag."
     investigation_details: "Investigation Details:"
     reunite_details: "Reunite Details:"
@@ -410,7 +410,7 @@ en:
     id_of_record_this_duplicate_of: "Enter the ID of the record this is a duplicate of:"
     duplicate_header: "Marking %{child_name} as Duplicate"
     flag_error_message: "Please explain why you are flagging this record."
-    flag_records_error_message: "Please explain why you are flagging these records."
+    flag_records_error_message: "Enter a flag reason and if adding a date use a valid date format."
     selected_records_error_message: "Please select one or more records to flag."
     investigation_details: "Investigation Details:"
     reunite_details: "Reunite Details:"
@@ -471,7 +471,7 @@ en:
     flag_label: "Flag"
     flag_reason: "Flag Reason"
     flag_reason_date: "Date (optional)"
-    flag_records_error_message: "Please explain why you are flagging these records."
+    flag_records_error_message: "Enter a flag reason and if adding a date use a valid date format."
     selected_records_error_message: "Please select one or more records to flag."
     unflag_record: "Unflag Record"
     unflag_reason: "Unflag Reason"
