adding disableable model concern

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -102,6 +102,8 @@ en:
 
   buttons:
      delete: "Delete"
+     disable: "Disable"
+     enable: "Enable"
      save: "Save"
      login: "Log in"
      reunite: "Reunite"
