--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1039,6 +1039,7 @@ en:
     placename: "Place name"
     type: "Type"
     parent: "Parent location"
+    show: "Show"
     messages:
       cannot_create: "Location could not be created"
       correct_errors: "Please correct the following errors and resubmit:"
@@ -1609,3 +1610,4 @@ en:
     status:
       enabled: "Enabled"
       disabled: "Disabled"
+      all: "All"
