Changed Users index table to use shared_configuration_resource/table

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -554,6 +554,7 @@ en:
     actions:
       show_all: "Showing all"
       show: "Show"
+      edit: "Edit"
     messages:
       disable: 'Are you sure you want to disable this user?'
     sort_by:
