--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1416,6 +1416,7 @@ en:
       location:
         name_present: "must not be blank"
         code_present: "must not be blank"
+        admin_level_present: "must not be blank"
         unique_name: "A Location with that name already exists, please enter a different name"
 
 
