--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -520,11 +520,18 @@ en:
       status: "Record Status"
 
   potential_match:
-    id: "ID#"
-    child_id: 'child id'
-    inquirer_id: 'inquirer id'
-    tr_id: 'tr id'
-    average_rating: 'average rating'
+    inquirer_id: 'inquirer id#'
+    inquirer_name: 'name of inquirer'
+    inquiry_date: 'date of inquiry'
+    inquirer_tr_name: 'tracing request'
+    child_id: 'child id#'
+    child_age: 'age'
+    child_gender: 'gender'
+    reg_date: 'registration date'
+    social_worker: 'social worker'
+    score: 'score'
+
+
 
   preposition:
     on_label: "on"
